# dbmanager

./: .gitignore  CMakeLists.txt  README.md  dbcli.c  dbmanager_conf.h.in  main.c
conf/: dbmanager.conf  dbmanager.service
deploy/: Dockerfile
scripts/: install.sh  pack.sh  uninstall.sh
src/: CMakeLists.txt  assert.h  connection_pool.c  connection_pool.h  db_manager.c  db_manager.h  http_client.c  http_client.h  http_server.c  http_server.h  key.h  logger.c  logger.h  macro.h
test/: CMakeLists.txt  db_test_utils.c  db_test_utils.h  integration_tests.sh  test_connection_pool.c  test_db_manager.c
